objects/acpoll__Poll_Answer__c.object
<CustomObject>
    <fields>
        <fullName>acpoll__Answer__c</fullName>
        <label>Answer</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acpoll__Order__c</fullName>
        <label>Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acpoll__Poll__c</fullName>
        <label>Poll</label>
        <referenceTo>acpoll__Poll__c</referenceTo>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Poll Answer</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Poll Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Poll Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>